[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.9.0"]

[tool.coverage.paths]
source = [
  "src/tekhsi",
  ".tox/**/site-packages/tekhsi",
]

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
fail_under = 67  # TODO: set to 100 after reaching 100% coverage
show_missing = true
skip_empty = true

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
  "_*.py",
]
source = ["tekhsi"]

[tool.docformatter]
close-quotes-on-newline = true
in-place = true
recursive = true
wrap-descriptions = 100
wrap-summaries = 0

[tool.poetry]
authors = ["Tektronix <opensource@tektronix.com>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Hardware :: Hardware Drivers",
]
description = "Transfer waveforms from Tektronix Oscilloscopes using the High-Speed Interface."
documentation = "https://TekHSI.readthedocs.io"
homepage = "https://pypi.org/project/TekHSI/"
keywords = [
  "Tektronix",
  "Test & Measurement",
]
license = "Apache-2.0"
maintainers = ["Tektronix <opensource@tektronix.com>"]
name = "TekHSI"
readme = "README.md"
repository = "https://github.com/tektronix/TekHSI"
version = "1.0.0"

[tool.poetry.dependencies]
colorlog = "^6.9.0"
grpcio = ">=1.66.2,<2.0"
grpcio-tools = ">=1.66.2,<2.0"
numpy = [
  # This is required to be duplicated in the "main" and "dev" groups to ensure that the correct version is used in both cases
  {python = ">=3.10,<3.13", version = "^1.24"},
  {python = ">=3.13", version = "^2.1"},
]
protobuf = "^5.28.1"
python = ">=3.10,<3.14"  # This is the main Python version requirement
python-dateutil = "^2.8.2"
tm_data_types = "^0.2.0"
typing_extensions = "^4.12.0"
tzlocal = "^5.2"

[tool.poetry.group.dev.dependencies]
docutils-stubs = "^0.0.22"
matplotlib = "^3.8"
nodeenv = "^1.9.1"
numpy = [
  # This is required to be duplicated in the "main" and "dev" groups to ensure that the correct version is used in both cases
  {python = ">=3.10,<3.13", version = "^1.24"},
  {python = ">=3.13", version = "^2.1"},
]
pip = "^25.0"
poetry = "^1.8.0"
poetry-audit-plugin = "^0.4.0"
poetry-plugin-export = "^1.7.1"
poetry-pre-commit-plugin = "^0.1.2"
pre-commit = "^4.2"
pylint = "3.3.7"
pyright = {extras = ["nodejs"], version = "1.1.402"}
pyroma = "^4.2"
pyvisa = "^1.14.1"
tm_devices = "^2.3.0"
tox = "^4.0"
tox-gh-actions = "^3.1.0"
twine = "^6.0.1"
types-python-dateutil = "^2.9"
types-pyyaml = "^6.0"
types-requests = "^2.31"
wheel = "^0.45.0"

[tool.poetry.group.docs.dependencies]
black = "^24.4.2"
codespell = "^2.2.6"
griffe = "^1.1.0"
mkdocs = "^1.6.0"
mkdocs-ezglossary-plugin = "^2.0.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^7.1.5"
mkdocs-literate-nav = "^0.6.1"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-mermaid2-plugin = "^1.1.1"
mkdocs-section-index = "^0.3.9"
mkdocs-spellcheck = "^1.1.0"
mkdocstrings = "^0.29.1"
mkdocstrings-python = "^1.10.2"
nodeenv = "^1.9.1"
packaging = "^24.2"
pygments = "^2.17.2"
pymdown-extensions = "^10.8.1"
requests = "^2.31.0"
symspellpy = "^6.7.7"
tomli = "^2.0.1"

[tool.poetry.group.tests.dependencies]
coverage = "^7.5.0"
linkchecker = "^10.0.0"
psutil = "^6.0.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-depends = "^1.0.1"
pytest-env = "^1.1.3"
pytest-github-report = "^0.0.1"
pytest-html = "^4.1.1"
pytest-order = "^1.2.1"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tektronix/TekHSI/issues"
"Changelog" = "https://github.com/tektronix/TekHSI/blob/main/CHANGELOG.md"

[tool.pylint.basic]
good-names = ["_"]

[tool.pylint.main]
fail-under = 10.0
ignore-patterns = [
  "^\\.#",
  "^\\..*_cache",
  "^\\.docs.*",
  "^\\.env.*",
  "^\\.idea",
  "^\\.results.*",
  "^\\.tox",
  "^\\.venv.*",
  "^\\.vscode",
  "^\\tests*",
  "^_tek_highspeed_server_pb2.pyi",
  "^_tek_highspeed_server_pb2\\.py",
  "^_tek_highspeed_server_pb2_grpc\\.py",
  "^temp_.*\\..*",
]
jobs = 0
load-plugins = """
pylint.extensions.check_elif,
pylint.extensions.code_style,
pylint.extensions.comparison_placement,
pylint.extensions.consider_refactoring_into_while_condition,
pylint.extensions.dict_init_mutate,
pylint.extensions.docparams,
pylint.extensions.docstyle,
pylint.extensions.dunder,
pylint.extensions.eq_without_hash,
pylint.extensions.for_any_all,
pylint.extensions.no_self_use,
pylint.extensions.overlapping_exceptions,
pylint.extensions.private_import,
pylint.extensions.set_membership,
pylint.extensions.typing,
pylint.extensions.while_used
"""
py-version = "3.10"  # PYTHON VERSION MARKER
recursive = true

[tool.pylint.messages_control]
enable = ["all"]
disable = [
  "broad-exception-caught",  # caught by ruff
  "consider-alternative-union-syntax",  # R6003
  "consider-using-with",  # TODO: enable this check
  "deprecated-typing-alias",  # caught by ruff
  "duplicate-code",
  "fixme",  # caught by ruff
  "global-statement",  # caught by ruff
  "invalid-name",  # caught by ruff
  "line-too-long",  # caught by ruff
  "locally-disabled",  # allowed
  "missing-class-docstring",  # caught by ruff
  "missing-module-docstring",  # caught by ruff
  "no-member",  # caught by pyright
  "no-self-use",  # R6301
  "protected-access",  # caught by ruff
  "raise-missing-from",  # caught by ruff
  "redefined-builtin",  # caught by ruff
  "suppressed-message",  # allowed
  "too-many-arguments",  # caught by ruff
  "too-many-branches",  # caught by ruff
  "too-many-lines",  # not necessary to check for
  "too-many-positional-arguments",  # R0917
  "too-many-statements",  # R0915
  "unexpected-keyword-arg",  # E1123
  "unnecessary-default-type-args",  # R6007
  "unused-argument",  # W0613
  "use-set-for-membership",  # R6201
  "useless-suppression",  # I0021
  "while-used",  # W0149
  "wrong-import-order",  # C0411
]

[tool.pylint.reports]
# Python expression which should return a score less than or equal to 10. You
# have access to the variables 'fatal', 'error', 'warning', 'refactor',
# 'convention', and 'info' which contain the number of messages in each category,
# as well as 'statement' which is the total number of statements analyzed. This
# score is used by the global evaluation report (RP0004).
evaluation = "max(0, 0 if fatal else 10.0 - ((float(5 * error + warning + refactor + convention + info) / statement) * 10))"
score = true
output-format = "text"  # colorized could be another option

[tool.pyright]
ignore = [
  "**/output_*/**",
  "site/**",
  "temp_*.py",
]
pythonPlatform = "All"
pythonVersion = "3.10"  # PYTHON VERSION MARKER
reportCallInDefaultInitializer = "error"
reportImplicitOverride = "error"
reportImplicitStringConcatenation = "error"
reportImportCycles = "none"  # other analysis tools catch these more effectively
reportMissingSuperCall = "none"  # this can be ignored since this would break unit tests if handled incorrectly
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedCallResult = "none"  # this can be ignored since this would break unit tests if handled incorrectly
strict = ["**"]
stubPath = "src"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

[tool.pytest.ini_options]
addopts = "--order-scope=module --cov-config=pyproject.toml"
doctest_optionflags = "ELLIPSIS NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
filterwarnings = [
  "ignore:Type google._upb._message.:DeprecationWarning",
]
junit_family = "xunit2"
junit_logging = "all"
log_format = "[%(asctime)s] [%(levelname)8s] %(message)s"
markers = [
  'docs',
  'order',
  'slow',
]
xfail_strict = true

[tool.pytest_env]
pytest_report_title = {skip_if_set = true, value = "Test Results"}

[tool.ruff]
line-length = 100
namespace-packages = ["docs/**", "examples/**", "scripts/**", "tests/**"]
output-format = "concise"
src = ["docs", "examples", "scripts", "src", "tests"]
target-version = "py310"  # always generate Python 3.10 compatible code  # PYTHON VERSION MARKER

[tool.ruff.lint]
allowed-confusables = []
fixable = ["ALL"]
flake8-pytest-style = {mark-parentheses = false}
flake8-quotes = {docstring-quotes = "double"}
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in *args and **kwargs (allowed in this package)
  "COM812",  # Trailing comma missing (handled by formatter)
  "FA100",  # Missing `from __future__ import annotations`, but uses ... (allowed in this package)
  "FIX002",  # Line contains TO DO (allowed in this package)
  "ISC001",  # single-line-implicit-string-concatenation (handled by formatter)
  "TD002",  # Missing author in TO DO (allowed in this package)
  "TD003",  # Missing issue link on the line following this TO DO (allowed in this package)
  "UP006",  # Use {to} instead of {from} for type annotation (allowed in this package)
  "UP007",  # Use `X | Y` for type annotations (allowed in this package)
  "UP024",  # Replace aliased errors with `OSError` (allowed in this package)
  "UP035",  # Use `X | Y` for type annotations
  "UP036",  # Use `X | Y` for type annotations
  "UP037",  # Remove quotes from type annotation (allowed in this package)
  "UP045",  # Use `X | None` for type annotations
]
pydocstyle = {convention = "google"}
pylint = {max-args = 7}
# https://beta.ruff.rs/docs/rules/
select = [
  "ALL",
]
task-tags = ["FIXME", "FUTURE", "RELIC", "TODO"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
known-first-party = [
  "tekhsi",
]
known-local-folder = [
  "server",
  "tests",
]
lines-between-types = 1
order-by-type = false

[tool.ruff.lint.per-file-ignores]
"examples/**" = [
  "E501",  # Line too long
  "ERA001",  # Found commented-out code
  "S101",  # Use of assert detected
  "SIM117",  # Use a single `with` statement with multiple contexts instead of nested `with` statements
  "T201",  # `print` found
]
"src/tekhsi/_tek_highspeed_server_pb2*.py*" = [
  "ALL",
]
"src/tekhsi/tek_hsi_connect.py" = [
  "BLE001",  # Do not catch blind exception: Exception
  "C901",  # Function too complex
  "PLR0912",  # Too many branches
  "PLR0915",  # Too many statements
  "SIM103",  # Return the negated condition directly
  "SIM105",  # Use contextlib.suppress
  "TRY300",  # Move statement to else block
  "TRY301",  # Abstract raise to inner function
  "TRY400",  # Use logging.exception instead of logging.error
]
"tests/**" = [
  "D104",  # Missing docstring in public package
  "PLC1901",  # compare-to-empty-string
  "PLR2004",  # Magic value used in comparison
  "S101",  # Use of assert detected
  "T201",  # `print` found
]
"tests/server/tekhsi_test_server.py" = [
  # TODO: remove this entire ignore section
  "ANN",
  "BLE001",
  "D102",
  "D107",
  "N80",
  "PLW0602",
  "PLW0603",
  "SIM",
  "SLF001",  # Private member accessed
]
"tests/test_client.py" = [
  "FBT001",  # Boolean-typed positional argument in function definition
  "SLF001",  # Private member accessed
]

[tool.semantic_release]
version_toml = [
  "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.changelog]
exclude_commit_patterns = []
template_dir = "python_semantic_release_templates"

[tool.semantic_release.changelog.environment]
extensions = []

[tool.semantic_release.commit_parser_options]
# These settings allow python-semantic-release to be used without triggering on any commits
allowed_tags = []
minor_tags = []
patch_tags = []

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
overrides."tool.coverage.paths.*".inline_arrays = false
overrides."tool.poetry.*".inline_arrays = false
overrides."tool.pylint.*".table_keys = false

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox>4
isolated_build = True
envlist = py310,py311,py312,py313,tests,docs,doctests  # PYTHON VERSION MARKERS
skip_missing_interpreters = True
labels =
  basic = py310,py311,py312,py313,tests  # PYTHON VERSION MARKERS
  documentation = docs,doctests

[gh-actions]
python =  # PYTHON VERSION MARKER
    3.10: py310
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
package = wheel
install_command = python -I -m pip install --upgrade --upgrade-strategy=eager {opts} {packages}
deps =
    poetry
setenv =
    COVERAGE_FILE = .coverage_{envname}
    DOC_PYTHON_VERSION = python3.11  # Keep this in sync with .readthedocs.yml and any CI scripts
    # Skip pre-commit checks that are not needed
    SKIP = file-contents-sorter
commands_pre =
    python -m poetry install --no-root --without=main
commands =
    !tests: python -c "import shutil; shutil.rmtree('.dist/{envname}', ignore_errors=True)"
    !tests: poetry build --output=.dist/{envname}
    !tests: twine check --strict .dist/{envname}/*
    !tests: pre-commit run --all-files
    pytest -vv -k "not test_docs" --showlocals --cov --junitxml={tox_root}/.results_{envname}/results.xml --cov-report=term --cov-report=xml:{tox_root}/.coverage_{envname}.xml --cov-report=html:{tox_root}/.results_{envname}/html --self-contained-html --html={tox_root}/.results_{envname}/results.html

[testenv:tests]
basepython = python
deps =
    -rtests/requirements.txt
passenv =
    pytest_report_title
setenv =
    pytest_github_report = true
    pytest_use_blanks = true
    GITHUB_STEP_SUMMARY = {tox_root}/.results_{envname}/github_report.md
commands_pre =

[testenv:docs]
basepython = {env:DOC_PYTHON_VERSION}
passenv =
    GITHUB_PAT
deps =
    -rdocs/requirements.txt
commands_pre =
    nodeenv --python-virtualenv --clean-src
    python scripts/install_insiders_packages.py
commands =
    python -c "import shutil; shutil.rmtree('.results_{envname}', ignore_errors=True)"
    mkdocs --verbose build --site-dir .results_{envname}

[testenv:doctests]
basepython = {env:DOC_PYTHON_VERSION}
passenv =
    GITHUB_PAT
deps =
    -rdocs/requirements.txt
    -rtests/requirements.txt
commands_pre =
    nodeenv --python-virtualenv --clean-src
    python scripts/install_insiders_packages.py
commands =
    pytest -v -k "test_docs" --showlocals --junitxml={tox_root}/.results_{envname}/results.xml --self-contained-html --html={tox_root}/.results_{envname}/results.html

[testenv:export-reqs]
commands =
    poetry export --without-hashes --without-urls --all-extras --only=docs --output=docs/requirements.txt
    poetry export --without-hashes --without-urls --all-extras --only=tests --output=tests/requirements.txt
    - pre-commit run -a requirements-txt-fixer
"""
